# 3DEdit

./: CMakeLists.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
